# SDM.QualityTesting

./: .gitignore  8771.js  README.md  check_datamodel_test.php  frontend_datamodel_test.html  pyproject.toml  requirements.txt  sdm_qatesting.py
.github/workflows/: python-app.yml
api/: custom_logging.py  server.py
cli/: command.py
common/: config.json  config.py  utils.py
doc/: openapi.yaml
smartdatamodels/: MD_exist.py  MD_exist_v1.py  MD_reported.py  MD_reported_v1.py  PC_exist_already.py  PC_exist_already_v1.py  PC_well_documented.py  PC_well_documented_v1.py  SDMLinks.py  check_FL_examples_T003.py  check_FL_examples_T003_v1.py  check_FL_others_T004.py  check_FL_others_T004_v1.py  check_FL_schema_T002.py  check_FL_schema_T002_v1.py  check_FS_T001.py  check_FS_T001_v1.py  master_tests.py  utils.py
smartdatamodels.org/removeme/: __init__.py  config_test.json  index.html?C=D;O=A  index.html?C=D;O=D  master_tests.py
smartdatamodels.org/removeme/fileContent/: MD_exist_v1.py  MD_reported_v1.py  PC_exist_already_v1.py  PC_well_documented_v1.py  check_FL_examples_T003_v1.py  check_FL_others_T004_v1.py  check_FL_schema_T002_v1.py  index.html?C=M;O=D  index.html?C=S;O=D
smartdatamodels.org/removeme/fileStructure/: check_FS_T001_v1.py  index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=S;O=A
smartdatamodels.org/removeme/utils/: index.html?C=D;O=A  index.html?C=M;O=D  index.html?C=N;O=A
smartdatamodels/removeme/: config_test.json  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
smartdatamodels/removeme/fileContent/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=A  index.html?C=N;O=D  index.html?C=S;O=A
smartdatamodels/removeme/fileStructure/: index.html?C=M;O=A  index.html?C=S;O=D
smartdatamodels/removeme/utils/: index.html?C=M;O=A  index.html?C=S;O=A  index.html?C=S;O=D
