[tool.poetry]
name = "sdm-qualitytesting"
version = "0.1.0"
description = "Python Server to execute SDM Quality Testing operations"
authors = ["Fernando López Aguilar <fernando.lopez@fiware.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
secure = "^0.3.0"
docopt = "^0.6.2"
loguru = "^0.7.2"
schema = "^0.7.5"
python-multipart = "^0.0.6"
pytz = "^2023.3.post1"
jsonref = "^1.1.0"
requests = "^2.31.0"
jsonschema = "^4.21.0"
pyyaml = "^6.0.1"
validator-collection = "^1.5.0"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
