[tool.poetry]
name = "sdm-qualitytesting"
version = "1.3.0"
description = "Python Server to execute SDM Quality Testing operations"
authors = ["Fernando López Aguilar <fernando.lopez@fiware.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
secure = "^1.0.1"
docopt = "^0.6.2"
loguru = "^0.7.2"
schema = "^0.7.7"
python-multipart = "^0.0.17"
pytz = "^2024.2"
jsonref = "^1.1.0"
requests = "^2.32.3"
jsonschema = "^4.23.0"
pyyaml = "^6.0.2"
validator-collection = "^1.5.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
